crates/keron-lang/tests/corpus/errors/parse/for_missing_in.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `{`, expected `in`
  --> 2:7
  |
2 | for x { reconcile x }
  |       ^
